# mongodb-hybrid-search-langchain

./: LICENSE  README.md  pyproject.toml  template.env
demo/: pyproject.toml
demo/src/demo/: __init__.py  vdb.py
src/demo/: hybrid_search.py  upload.py  vdb.py
