[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Marc Fabian Mezger", email = "marc.mezger@googlemail.com" }
]
dependencies = [
    "langchain-mongodb>=0.2.0",
    "langchain-cohere>=0.3.0",
    "pypdfium2>=4.30.0",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/demo"]
